# ymc3d

./: CMakeLists.txt  README  README.md  to_be_added_to_issue_tracker
gpumcml_rng/: gpumcml_rng.cu  gpumcml_rng.h
matlab/geometry/: prepare_geometry.m  prepare_model.m  prepare_optprops.m  write_geometry_file.m  write_optical_props_file.m
matlab/read/: read_general_mcfile.m  read_ymc3d_outputfile.m
src/: LICENSE  gpumcml_rng.h  mc3d_cpu.cu  mc3d_cpu.h  mc3d_gpu.cu  mc3d_gpu.h  mc3d_io.cu  mc3d_io.h  mc3d_main.cu  mc3d_photons.cu  mc3d_photons.h  mc3d_rng.cu  mc3d_rng.h  mc3d_types.h
